<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jerome.musiclibrary.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/CaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="About" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/creator_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/creator_email" />

        <TextView
            style="@style/CaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Credits" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/credits_song_image1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/credits_song_image2" />


        <Button
            android:id="@+id/back"
            style="@style/BackBtnStyle"/>

    </LinearLayout>

</ScrollView>
