<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jerome.musiclibrary.SongInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/CaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Song Information" />

        <!-- song image -->
        <ImageView
            android:id="@+id/song_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/image_border"
            android:padding="12dp"
            android:src="@drawable/song_image" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/song_name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- song description -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - " />

            <TextView
                android:id="@+id/song_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_name" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
